--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="landing-section" id="landingSection">
         <div class="landing-section-left">
             <h5>We are here</h5>
-            <h1>To Supoort You <span> 24/7</span></h1>
-            <p>At We are here for you 24/7 available. We provide full support in solving your issues..</p>
+            <h1>To Care You <span> 24/7</span></h1>
+            <p>We are always here for you.</p>
             <div class="landing-btn-box">
                 <a href="tel:+18333163723" class="contact-btn btn-a">CALL NOW</a>
             </div>
@@ -38,12 +38,12 @@
                 <img src="./images/main-logo.png" alt="">
                 <h2>Cash-App</h2>
             </div>
-            <p>Our representatives are always there for your issues. We are 24 hours availble 7 days a week..</p>
+            <p>We help you everytime you need...</p>
         </div>
     </div>
 
     <div class="extra-section">
-        <h2>If any question kindly contact us.</h2>
+        <h2>If any query join us.</h2>
     </div>
 
     <div class="contact-section" id="contactSection">
@@ -69,7 +69,7 @@
             <a href="#contactSection">Contact</a>
         </div>
         <div class="third-col col">
-            <p>We provide seamless help to our customer 24 / 7 .</p>
+            <p>We provide good support to our customers 24 hours a day. .</p>
             <a href="tel:+18333163723" class="btn-a">CALL NOW</a>
         </div>
     </footer>
